--- a/XamarinDemo/XamarinDemo/Views/Home.xaml
+++ b/XamarinDemo/XamarinDemo/Views/Home.xaml
@@ -3,21 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:Colors="clr-namespace:XamarinDemo.Common"
              mc:Ignorable="d"
              x:Class="XamarinDemo.Views.Home">
     <ContentPage.Content>
         <StackLayout>
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" HeightRequest="300">
-                <Label Text="QUALITEST" TextColor="Purple" FontAttributes="Bold" FontSize="50"/>
+                <Label Text="QUALITEST" TextColor="{x:Static Colors:Colors.QTPurple}" FontAttributes="Bold" FontSize="50"/>
             </StackLayout>
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Padding="10">
                 <Label Text="Welcome to Qualitest Partner, the next step in working with our clients and ensuring success" FontSize="Medium"/>
             </StackLayout>
             <StackLayout Orientation="Horizontal">
-                <Button Text="Login" TextColor="White" BackgroundColor="Purple" HorizontalOptions="FillAndExpand" Margin="40"/>
+                <Button Text="Login" TextColor="{x:Static Colors:Colors.QTWhite}" BackgroundColor="{x:Static Colors:Colors.QTPurple}" HorizontalOptions="FillAndExpand" Margin="40"/>
             </StackLayout>
             <StackLayout Orientation="Horizontal">
-                <Button Text="Contact Us" TextColor="White" BackgroundColor="Purple" HorizontalOptions="FillAndExpand" Margin="40"/>
+                <Button Text="Contact Us" TextColor="{x:Static Colors:Colors.QTWhite}" BackgroundColor="{x:Static Colors:Colors.QTPurple}" HorizontalOptions="FillAndExpand" Margin="40"/>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
