--- a/XamarinDemo/XamarinDemo/Views/Login.xaml
+++ b/XamarinDemo/XamarinDemo/Views/Login.xaml
@@ -3,13 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:Colors="clr-namespace:XamarinDemo.Common"
              mc:Ignorable="d"
              x:Class="XamarinDemo.Views.Login">
     <ContentPage.Content>
         <!--Login Screen Layout-->
         <StackLayout>
-            <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" HeightRequest="200" BackgroundColor="Purple">
-                <Label Text="QUALITEST" TextColor="White" FontAttributes="Bold" FontSize="50" HorizontalTextAlignment="Center"/>
+            <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" HeightRequest="200" BackgroundColor="{x:Static Colors:Colors.QTPurple}">
+                <Label Text="QUALITEST" TextColor="{x:Static Colors:Colors.QTWhite}" FontAttributes="Bold" FontSize="50" HorizontalTextAlignment="Center"/>
             </StackLayout>
             <Label Text="Welcome back!" FontAttributes="Bold" HorizontalTextAlignment="Center" FontSize="25"/>
             <StackLayout Orientation="Vertical">
@@ -19,14 +20,14 @@
                 <Entry Placeholder="*********" HorizontalOptions="FillAndExpand" IsPassword="True"/>
             </StackLayout>
             <StackLayout Orientation="Horizontal">
-                <Button Text="Submit" TextColor="White" BackgroundColor="Purple" HorizontalOptions="FillAndExpand" Margin="40"/>
+                <Button Text="Submit" TextColor="{x:Static Colors:Colors.QTWhite}" BackgroundColor="{x:Static Colors:Colors.QTPurple}" HorizontalOptions="FillAndExpand" Margin="40"/>
             </StackLayout>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40"/>
                 </Grid.RowDefinitions>
-                <Button Text="Reset" TextColor="White" BackgroundColor="Gray" Grid.Column="0"/>
-                <Button Text="Cancel" TextColor="White" BackgroundColor="Red" Grid.Column="1"/>
+                <Button Text="Reset" TextColor="White" BackgroundColor="{x:Static Colors:Colors.QTGray}" Grid.Column="0"/>
+                <Button Text="Cancel" TextColor="White" BackgroundColor="{x:Static Colors:Colors.QTRed}" Grid.Column="1"/>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
