--- a/XamarinDemo/XamarinDemo/App.xaml
+++ b/XamarinDemo/XamarinDemo/App.xaml
@@ -3,9 +3,46 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:Colors="clr-namespace:XamarinDemo.Common"
              mc:Ignorable="d"
              x:Class="XamarinDemo.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <!--Trigger in Style-->
+            <Style TargetType="Entry">
+                <Style.Triggers>
+                    <Trigger TargetType="Entry" Property="IsFocused" Value="True">
+                        <Setter Property="BackgroundColor" Value="Aqua"/>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <!--Explicit Style-->
+            <Style x:Key="DefaultButtonStyle" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{x:Static Colors:Colors.QTPurple}"/>
+                <Setter Property="FontFamily" Value="Arial"/>
+                <Setter Property="Font" Value="20"/>
+                <Setter Property="TextColor" Value="{x:Static Colors:Colors.QTWhite}"/>
+            </Style>
+            <Style x:Key="HeaderLabelStyle" TargetType="Label">
+                <Setter Property="FontFamily" Value="Arial"/>
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+            </Style>
+            <!--Implicit Style-->
+            <Style TargetType="Label">
+                <Setter Property="FontFamily" Value="Arial"/>
+                <Setter Property="FontSize" Value="16"/>
+            </Style>
+            <!--Inherited Style-->
+            <Style x:Key="GrayButtonStyle" TargetType="Button" BasedOn="{x:StaticResource DefaultButtonStyle}">
+                <Setter Property="BackgroundColor" Value="{x:Static Colors:Colors.QTGray}"/>
+            </Style>
+            <Style x:Key="RedButtonStyle" TargetType="Button" BasedOn="{x:StaticResource DefaultButtonStyle}">
+                <Setter Property="BackgroundColor" Value="{x:Static Colors:Colors.QTRed}"/>
+            </Style>
+            <Style x:Key="CaptionLabelStyle" TargetType="Label" BasedOn="{x:StaticResource HeaderLabelStyle}">
+                <Setter Property="FontSize" Value="16"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
