--- a/XamarinDemo/XamarinDemo/Views/QualitestFeedPage.xaml
+++ b/XamarinDemo/XamarinDemo/Views/QualitestFeedPage.xaml
@@ -17,7 +17,10 @@
                                         <Label Text="{Binding Heading}" Style="{StaticResource CaptionLabelStyle}"/>
                                     </StackLayout>
                                     <Image Source="{Binding ImageUrl}" HeightRequest="150" WidthRequest="150"/>
-                                    <Label Text="{Binding Description}"/>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="StartAndExpand">
+                                        <Label Text="{Binding Description}"/>
+                                        <Image Source="arrow_right.png" HeightRequest="25" WidthRequest="25"/>
+                                    </StackLayout>
                                 </StackLayout>
                             </Frame>
                         </ViewCell>
