--- a/XamarinDemo/XamarinDemo/Views/QualitestFeedPage.xaml
+++ b/XamarinDemo/XamarinDemo/Views/QualitestFeedPage.xaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d"
              x:Class="XamarinDemo.Views.QualitestFeedPage">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Padding="10,0,10,0">
             <ListView ItemsSource="{Binding Feeds}" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -16,7 +16,8 @@
                                     <StackLayout Orientation="Horizontal">
                                         <Label Text="{Binding Heading}" Style="{StaticResource CaptionLabelStyle}"/>
                                     </StackLayout>
-                                    <Image Source="{Binding ImageUrl}" HeightRequest="150" WidthRequest="150"/>
+                                    <BoxView HeightRequest="1" BackgroundColor="Black" HorizontalOptions="FillAndExpand" />
+                                    <Image Source="{Binding ImageUrl}"/>
                                     <StackLayout Orientation="Horizontal" HorizontalOptions="StartAndExpand">
                                         <Label Text="{Binding Description}"/>
                                         <Image Source="arrow_right.png" HeightRequest="25" WidthRequest="25"/>
