add show/hide password image & implement cancel logout page behaviour

--- a/XamarinDemo/XamarinDemo/Views/Login.xaml
+++ b/XamarinDemo/XamarinDemo/Views/Login.xaml
@@ -22,7 +22,14 @@
                     </Entry.Behaviors>
                 </Entry>
                 <Label Text="Password" FontAttributes="Bold" HorizontalOptions="StartAndExpand" Style="{StaticResource CaptionLabelStyle}"/>
-                <Entry Text="{Binding Password}" Placeholder="*********" HorizontalOptions="FillAndExpand" IsPassword="{Binding ShowPassword}"/>
+                <StackLayout Orientation="Horizontal">
+                    <Entry Text="{Binding Password}" Placeholder="*********" HorizontalOptions="FillAndExpand" IsPassword="{Binding ShowPassword}"/>
+                    <Image Source="toggle_password.PNG" HeightRequest="20" WidthRequest="30">
+                        <Image.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding TogglePasswordCommand}"/>
+                        </Image.GestureRecognizers>
+                    </Image>
+                </StackLayout>
             </StackLayout>
             <StackLayout Orientation="Horizontal">
                 <Button Text="Submit" Style="{StaticResource DefaultButtonStyle}" HorizontalOptions="FillAndExpand" Margin="40"
@@ -33,7 +40,7 @@
                     <RowDefinition Height="40"/>
                 </Grid.RowDefinitions>
                 <Button Text="Reset" Style="{StaticResource GrayButtonStyle}" Grid.Column="0" Command="{Binding ResetCommand}"/>
-                <Button Text="Toggle Pwd" Style="{StaticResource RedButtonStyle}" Grid.Column="1" Command="{Binding TogglePasswordCommand}"/>
+                <Button Text="Cancel" Style="{StaticResource RedButtonStyle}" Grid.Column="1" Command="{Binding CancelCommand}"/>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
